@@ -1,3 +1,12 @@
+2008-06-07  Uros Bizjak  <ubizjak@gmail.com>
+
+	Backport from mainline:
+	2008-05-12  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR rtl-optimization/36111
+	* recog.c (validate_replace_rtx_1): Unshare new RTL expression
+	that was created for swappable operands.
+
 2008-06-07  Andy Hutchinson  <hutchinsonandy@aim.com>
 
 	PR target/27386
